# snuffer

./: .gitignore  PLAN.md  README.md  method.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_direct_injection.md  02_base64_payload.md  03_homoglyph_attack.md  04_multi_step_attack.md  05_clean_text.md  06_filter_mode.md  README.md  examples.yml  sample_1.md  sample_10.md  sample_11.md  sample_12.md  sample_13.md  sample_14.md  sample_15.md  sample_16.md  sample_17.md  sample_18.md  sample_19.md  sample_2.md  sample_3.md  sample_4.md  sample_5.md  sample_6.md  sample_7.md  sample_8.md  sample_9.md
src/snuffer/: api.py  bracketer.py  chunker.py  formatter.py  models.py  normalizer.py  quarantine_writer.py  reviewer.py  sanitizer.py  server.py
src/snuffer/modes/: filter.py  review.py
tests/: test_api.py  test_chunker.py  test_filter.py  test_formatter.py  test_normalizer.py  test_quarantine_writer.py  test_reviewer.py  test_sanitizer.py
tests/fixtures/: base64_payload.txt  clean_text.txt
