[project]
name = "snuffer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "anthropic>=0.40",
    "unidecode>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
]

[project.scripts]
snuffer = "snuffer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snuffer"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.11",
]
